2008-04-02  Alan Modra  <amodra@bigpond.net.au>

	* elf32-spu.c (insert_callee): Reorder call list so most recent
	call is always first.
	(interesting_section): Move.
	(mark_functions_via_relocs): Fold interesting_section and
	reloc_count tests in callers to here.  Simplify output section
	owner test.
	(discover_functions): Set "gaps" when no symbols and some
	"interesting_section".  Run pasted_function loop for no symbol
	bfds.
	(for_each_node, transfer_calls): New functions.
	(mark_non_root): Adjust to suit for_each_node.
	(call_graph_traverse): Likewise.  Fix memory leak.  Rename to..
	(remove_cycles): ..this.
	(build_call_tree): Use for_each_node and transfer_calls.
	(struct _sum_stack_param): New.
	(sum_stack): Adjust to suit for_each_node.  Return error on
	malloc failure.  Move code to print root node cumulative stack from..
	(spu_elf_stack_analysis): ..here.  Use for_each_node.

2008-03-31  Cary Coutant  <ccoutant@google.com>

	PR 6006
	* archive.c (_bfd_slurp_extended_name_table): Change
	ARFMAG[0] to ARFMAG[1].
	(_bfd_construct_extended_name_table): Likewise.

2008-03-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* elfxx-mips.c (mips_elf_record_got_page_entry): Update comment.
	(_bfd_mips_elf_check_relocs): Update comments.  Always call
	mips_elf_record_got_page_entry for R_MIPS_GOT_PAGE.

2008-03-27  Cary Coutant  <ccoutant@google.com>

	Add support for thin archives.
	* archive.c (_bfd_find_nested_archive): New function.
	(get_extended_arelt_filename): Add origin parameter.
	(_bfd_generic_read_ar_hdr_mag): Deal with extended name
	combined with a file offset.
	(append_relative_path): New function.
	(_bfd_get_elt_at_filepos): Deal with external members and
	nested archives.
	(bfd_generic_openr_next_archived_file): Thin archives.
	(bfd_generic_archive_p): Recognize new magic string.
	(adjust_relative_path): New function.
	(_bfd_construct_extended_name_table): Construct extended
	names for thin archive members.